# interviewlab

./: .gitignore  README.md
.github/workflows/: release.yml
_e2e/: cdp.mjs  gpu_dev.cmd
docs/: design-direction.md  e2e-bugs.md  feature-cli-plugins.md  feature-cycle-chat.md  feature-diarization.md  feature-guide-template.md  feature-logging.md  feature-roles-and-guides.md  feature-segment-diff.md  feature-transcript-import.md  fix-edited-timing.md  goal-progress.md  mac-build.md  mac-run-for-agent.md  product-spec.md  release.md  reuse-landscape.md  transcription-terminology.md  ui-backlog.md  v2-audit-findings.md  v2-roadmap.md  v3-roast-and-plan.md
docs/reuse/: agent-cli-orchestration.md  domain-and-shadcn-blocks.md  editors-and-transcript-ui.md  transcription-and-tauri.md
interviewlab/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
interviewlab/src/: App.css  App.tsx  index.css  main.tsx  providers.tsx
interviewlab/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
interviewlab/src-tauri/.cargo/: config.toml  config.toml.example
interviewlab/src-tauri/migrations/: 0001_init.sql  0002_roles_guides.sql  0003_synthesis_artifacts.sql  0004_chat.sql  0005_products.sql  0006_glossary.sql  0007_transcribe_checkpoint.sql  0008_guide_template.sql  0009_global_glossary.sql  0009_hot_fk_indexes.sql  0010_coverage.sql
interviewlab/src-tauri/src/: adapter.rs  asr.rs  chat.rs  cleanup.rs  coverage.rs  cycle.rs  diarize.rs  diff.rs  glossary.rs  guides.rs  interview.rs  lib.rs  logging.rs  main.rs  product.rs  roles.rs  synthesis.rs  transcript.rs
interviewlab/src/components/: backend-status.tsx  command-palette.tsx  confirm-dialog.tsx  coverage-panel.tsx  cycle-chat-panel.tsx  data-table.tsx  diff-tab.tsx  glossary-panel.tsx  glossary-suggest-dialog.tsx  guide-template-editor.tsx  interview-summary-panel.tsx  interviews-tab.tsx  language-toggle.tsx  live-transcript-view.tsx  markdown-editor.tsx  new-cycle-dialog.tsx  onboarding-wizard.tsx  role-chip.tsx  roles-settings.tsx  status-dot.tsx  synthesis-tab.tsx  task-center.tsx  theme-toggle.tsx  waveform-player.tsx
interviewlab/src/components/ui/: command.tsx  popover.tsx  resizable.tsx  textarea.tsx
interviewlab/src/lib/: adapter-queries.ts  asr-queries.ts  chat-queries.ts  cycle-queries.ts  dev-mock.ts  diff-queries.ts  format.ts  glossary-queries.ts  glossary-seed.ts  guide-queries.ts  i18n.ts  interview-progress.tsx  interview-queries.ts  live-asr-store.ts  mock-audio.ts  platform.ts  product-queries.ts  report-export.ts  role-queries.ts  synthesis-queries.ts  synthesis-run-store.ts  task-store.ts  tauri.ts  transcript-queries.ts  ui-store.ts  use-live-asr.ts  use-synthesis-runs.ts  word-diff.ts
interviewlab/src/pages/: cycle-detail.tsx  cycles.tsx  guides.tsx  products.tsx  settings.tsx  transcript-editor.tsx
scripts/: setup-macos.sh  setup-windows.ps1
